create base code